<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/general_settings"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="language"
            android:title="@string/language"
            android:summary="%s"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:defaultValue="en"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:key="theme_mode"
            android:title="@string/theme"
            android:summary="%s"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="-1"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:key="notifications_enabled"
            android:title="@string/enable_notifications"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:key="daily_forecast_enabled"
            android:title="@string/daily_forecast_alerts"
            android:defaultValue="true"
            android:dependency="notifications_enabled"
            app:iconSpaceReserved="false" />

        <SeekBarPreference
            android:key="aqi_threshold"
            android:title="@string/aqi_threshold"
            android:defaultValue="100"
            android:max="300"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/account_settings"
        app:iconSpaceReserved="false">

        <Preference
            android:key="logout"
            android:title="@string/logout"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen> 